--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./pages/index.css" type="text/css" />
     <title>Путешествие по России</title>
   </head>
   <body class="root">
-    
+    <header class="header">
+      <img src="./images/logo/logo.svg" alt="Логотип" class="header__logo" />
+      <div class="header__language">
+        <a href="#" class="header__link header__link_active">Ru</a>
+        <a href="#" class="header__link">En</a>
+      </div>
+    </header>
   </body>
 </html>
