--- a/index.html
+++ b/index.html
@@ -312,13 +312,34 @@
         </article>
       </section>
       <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <h2 class="cover__title">
+          <a
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            class="cover__link"
+            >До Байкала «на собаках»</a
+          >
+        </h2>
         <p class="cover__subtitle">
           По мотивам учебной темы о Транссибе — путешествие от столицы до
           Байкала на электричках.
         </p>
-        <div class="cover__background"></div>
       </section>
+      <footer class="footer">
+        <nav class="footer__list">
+          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+          <a href="https://calendar.yandex.ru" class="footer__link"
+            >Календарь</a
+          >
+          <a href="https://travel.yandex.ru" class="footer__link"
+            >Путешествия</a
+          >
+        </nav>
+        <div class="footer__copyright">
+          <p class="footer__author">© 2022. Владислав Корнюхов</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
