--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="root">
     <header class="header">
-      <img src="./images/logo/logo.svg" alt="Логотип" class="header__logo" />
+      <img src="./images/logo/logo.svg" alt=" Логотип сайта." class="header__logo" />
       <ul class="header__language">
         <li class="header__links">
           <a href="#" class="header__link header__link_active">Ru</a>
@@ -28,7 +28,7 @@
         <figure class="lead__main-img">
           <img
             src="./images/lead__image.png"
-            alt="Пассажир в поезде"
+            alt=" Пассажир поезда лежит в вагоне."
             class="lead__image"
           />
           <figcaption class="lead__desc-img">ваша полка — верхняя</figcaption>
@@ -81,84 +81,84 @@
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item1.jpg"
-            alt="Вид с поезда"
+            alt=" Вид из окна вагона на лес и озеро."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item2.jpg"
-            alt="Снежные горы в облаках"
+            alt=" Снежные горы до неба в облаках."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item3.jpg"
-            alt="Волк в поле на сене"
+            alt=" Волк в зеленом туманном поле стоит на стоге сена."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item4.jpg"
-            alt="Лес в тумане"
+            alt=" Зеленые деревья стоят на горе в тумане."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item5.jpg"
-            alt="Машина на льду"
+            alt=" Машина стоит на потресканном льду."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item6.jpg"
-            alt="Пляж"
+            alt=" Океан с красным пряжем на фоне высокие горы."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item7.jpg"
-            alt="Остыре горы в снегу"
+            alt=" Высокие, отстрые горы со снегом на конце."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item8.jpg"
-            alt="Пешеходный знак"
+            alt=" Пешеходный знак на пустынном дороге."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item9.jpg"
-            alt="Желтые горы в тумане"
+            alt=" Желтые, гладкие горы в тумане в некоторых местах снег."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item10.jpg"
-            alt="Снежные горы в поле"
+            alt=" Заснеженная гора в зеленом поле."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item11.jpg"
-            alt="Пляж в горах"
+            alt=" Голубой пляж в низине заснеженных гор."
             class="photo-grid__image"
           />
         </figure>
         <figure class="photo-grid__item">
           <img
             src="./images/galery__item12.jpg"
-            alt="Зеленые горы в тумане"
+            alt=" Зеленые, острые горы в тумане."
             class="photo-grid__image"
           />
         </figure>
@@ -172,7 +172,7 @@
           </div>
           <img
             src="./images/place__image1.jpg"
-            alt="Куршская коса"
+            alt=" Срубленные деревья в озере."
             class="place__image"
           />
           <div class="place__paragraphs">
@@ -180,15 +180,15 @@
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.
+              природная зона на&nbsp;краю российского анклава.
             </p>
             <p class="place__paragraph">
-              На этом Калининградская область не заканчивается. Для
-              путешественника и исследователя там же по соседству — самая
-              западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в спокойствие природы и запах стального,
-              прохладного моря.
+              На этом Калининградская область не заканчивается.
+              Для&nbsp;путешественника и&nbsp;исследователя там же
+              по&nbsp;соседству — самая западная точка России, Балтийская коса,
+              — и&nbsp;немецкое наследие россыпи небольших приморских городов.
+              Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+              природы и запах стального, прохладного моря.
             </p>
           </div>
         </article>
@@ -204,7 +204,7 @@
           </div>
           <img
             src="./images/place__image2.jpg"
-            alt="Кольский"
+            alt=" Большая заснеженная гора в океане."
             class="place__image"
           />
           <div class="place__paragraphs">
@@ -236,7 +236,7 @@
           </div>
           <img
             src="./images/place__image3.jpg"
-            alt="Алтай"
+            alt=" Ноутбук стоит на бревне на фоне зеленого леса."
             class="place__image"
           />
           <div class="place__paragraphs">
@@ -265,7 +265,7 @@
           </div>
           <img
             src="./images/place__image4.jpg"
-            alt="Зимний Байкал"
+            alt=" Потресканый лёд на озере Байкал."
             class="place__image"
           />
           <div class="place__paragraphs">
@@ -275,11 +275,11 @@
               красивейших мест в России.
             </p>
             <p class="place__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место
-              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+              Конечно, это всё так. Но Байкал ещё идеальное местодля 
+              соревнований по скийорингу. Это такой вид спорта, когда лыжник
               привязывает себя к мотоциклу, и тандем старается развить как можно
               бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+              «Байкальская миля» был поставлен&nbsp;мировой рекорд — 197.011 км/ч.
             </p>
           </div>
         </article>
@@ -293,7 +293,7 @@
           </div>
           <img
             src="./images/place__image5.jpg"
-            alt="Карелия"
+            alt=" Вид на речку из зеленого леса."
             class="place__image"
           />
           <div class="place__paragraphs">
@@ -312,34 +312,29 @@
         </article>
       </section>
       <section class="cover">
-        <h2 class="cover__title">
-          <a
-            href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__link"
-            >До Байкала «на собаках»</a
-          >
-        </h2>
-        <p class="cover__subtitle">
-          По мотивам учебной темы о Транссибе — путешествие от столицы до
-          Байкала на электричках.
-        </p>
+        <a
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          class="cover__link"
+        >
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие
+            от столицы до Байкала на электричках.
+          </p>
+        </a>
       </section>
-      <footer class="footer">
-        <nav class="footer__list">
-          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-          <a href="https://calendar.yandex.ru" class="footer__link"
-            >Календарь</a
-          >
-          <a href="https://travel.yandex.ru" class="footer__link"
-            >Путешествия</a
-          >
-        </nav>
-        <div class="footer__copyright">
-          <p class="footer__author">© 2022. Владислав Корнюхов</p>
-        </div>
-      </footer>
     </main>
+    <footer class="footer">
+      <nav class="footer__list">
+        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+      </nav>
+      <div class="footer__copyright">
+        <p class="footer__author">© 2022. Владислав Корнюхов</p>
+      </div>
+    </footer>
   </body>
 </html>
