--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" type="text/css" />
-    <title>Путешествие по России</title>
+    <title>Путешествия по России</title>
   </head>
   <body class="root">
     <header class="header">
@@ -25,9 +25,9 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">
-          Настоящая страна не в выпусках новостей, а здесь.
+          Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а здесь.
         </p>
         <figure class="lead__main-img">
           <img
@@ -171,7 +171,7 @@
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
           </div>
           <img
@@ -201,7 +201,7 @@
         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               class="place__link"
@@ -235,7 +235,7 @@
         <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a
               href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
               class="place__link"
@@ -268,7 +268,7 @@
         <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a href="https://vk.com/baikalmile" class="place__link"
               >https://vk.com/baikalmile</a
             >
@@ -290,7 +290,7 @@
               лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается
               развить как можно б&oacute;льшую скорость на&nbsp;льду.
               В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская
-              миля&raquo; был поставлен мировой рекорд&nbsp;&mdash;
+              миля&raquo; был поставлен&nbsp;мировой&nbsp;рекорд&nbsp;&mdash;
               197.011&nbsp;км/ч.
             </p>
           </div>
@@ -298,7 +298,7 @@
         <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a href="http://vodlozero.ru/" class="place__link"
               >http://vodlozero.ru/</a
             >
